--- a/Hyakuninisshu/Base.lproj/Main.storyboard
+++ b/Hyakuninisshu/Base.lproj/Main.storyboard
@@ -249,8 +249,8 @@
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Hy0-A3-57n" firstAttribute="top" secondItem="Cf6-ls-zbX" secondAttribute="top" id="6ym-Pu-RFF"/>
-                            <constraint firstAttribute="trailing" secondItem="Hy0-A3-57n" secondAttribute="trailing" id="RYM-as-kAo"/>
-                            <constraint firstItem="Hy0-A3-57n" firstAttribute="leading" secondItem="V0Z-9M-Dz9" secondAttribute="leading" id="Row-St-9ou"/>
+                            <constraint firstItem="Hy0-A3-57n" firstAttribute="trailing" secondItem="Cf6-ls-zbX" secondAttribute="trailing" id="RYM-as-kAo"/>
+                            <constraint firstItem="Hy0-A3-57n" firstAttribute="leading" secondItem="Cf6-ls-zbX" secondAttribute="leading" id="Row-St-9ou"/>
                             <constraint firstItem="Hy0-A3-57n" firstAttribute="bottom" secondItem="Cf6-ls-zbX" secondAttribute="bottom" id="oww-Dd-Be7"/>
                         </constraints>
                     </view>
@@ -310,8 +310,86 @@
                     <view key="view" contentMode="scaleToFill" id="6HQ-Hu-3Zj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kBn-C3-2n8">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nmN-z4-4cs" userLabel="ContentsView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1400"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="出題範囲" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8TG-7p-gsp">
+                                                <rect key="frame" x="16" y="32" width="382" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FjN-cm-9sW" userLabel="RangeCondition">
+                                                <rect key="frame" x="0.0" y="56.5" width="414" height="40"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DUZ-yn-wNR" userLabel="RangeFrom" customClass="KeyboardPicker" customModule="Hyakuninisshu" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="173.5" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                    </view>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="〜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egO-Rf-0BW">
+                                                        <rect key="frame" x="181.5" y="0.0" width="17.5" height="40"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lo2-JV-ciE" userLabel="RangeTo" customClass="KeyboardPicker" customModule="Hyakuninisshu" customModuleProvider="target">
+                                                        <rect key="frame" x="207" y="0.0" width="207" height="40"/>
+                                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                                    </view>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="DUZ-yn-wNR" firstAttribute="top" secondItem="FjN-cm-9sW" secondAttribute="top" multiplier="2" id="DEx-mZ-Ck3"/>
+                                                    <constraint firstAttribute="bottom" secondItem="egO-Rf-0BW" secondAttribute="bottom" id="IM9-za-a2W"/>
+                                                    <constraint firstAttribute="bottom" secondItem="lo2-JV-ciE" secondAttribute="bottom" id="O2q-Yn-Owe"/>
+                                                    <constraint firstAttribute="trailing" secondItem="lo2-JV-ciE" secondAttribute="trailing" id="SjL-XA-LFL"/>
+                                                    <constraint firstItem="egO-Rf-0BW" firstAttribute="leading" secondItem="DUZ-yn-wNR" secondAttribute="trailing" constant="8" symbolic="YES" id="eVx-Tt-eh7"/>
+                                                    <constraint firstItem="lo2-JV-ciE" firstAttribute="top" secondItem="FjN-cm-9sW" secondAttribute="top" id="guL-Rp-2el"/>
+                                                    <constraint firstItem="DUZ-yn-wNR" firstAttribute="width" relation="lessThanOrEqual" secondItem="FjN-cm-9sW" secondAttribute="width" multiplier="0.5" id="icJ-c0-kj4"/>
+                                                    <constraint firstItem="lo2-JV-ciE" firstAttribute="width" relation="lessThanOrEqual" secondItem="FjN-cm-9sW" secondAttribute="width" multiplier="0.5" id="jJd-yo-fwt"/>
+                                                    <constraint firstItem="lo2-JV-ciE" firstAttribute="leading" secondItem="egO-Rf-0BW" secondAttribute="trailing" constant="8" symbolic="YES" id="kql-LZ-qlT"/>
+                                                    <constraint firstAttribute="height" constant="40" id="mhf-88-GX4"/>
+                                                    <constraint firstItem="DUZ-yn-wNR" firstAttribute="leading" secondItem="FjN-cm-9sW" secondAttribute="leading" id="o5M-G0-Q2T"/>
+                                                    <constraint firstAttribute="bottom" secondItem="DUZ-yn-wNR" secondAttribute="bottom" id="o8P-ou-hDK"/>
+                                                    <constraint firstItem="egO-Rf-0BW" firstAttribute="top" secondItem="FjN-cm-9sW" secondAttribute="top" id="xDK-3X-J8p"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1400" id="0zW-Nn-PF9"/>
+                                            <constraint firstItem="8TG-7p-gsp" firstAttribute="leading" secondItem="nmN-z4-4cs" secondAttribute="leading" constant="16" id="2n8-jx-OYn"/>
+                                            <constraint firstItem="FjN-cm-9sW" firstAttribute="top" secondItem="8TG-7p-gsp" secondAttribute="bottom" constant="4" id="JvA-1n-aXK"/>
+                                            <constraint firstItem="8TG-7p-gsp" firstAttribute="centerX" secondItem="nmN-z4-4cs" secondAttribute="centerX" id="Yib-P9-yd0"/>
+                                            <constraint firstItem="FjN-cm-9sW" firstAttribute="width" secondItem="nmN-z4-4cs" secondAttribute="width" id="b9y-Hw-KEu"/>
+                                            <constraint firstItem="FjN-cm-9sW" firstAttribute="centerX" secondItem="nmN-z4-4cs" secondAttribute="centerX" id="dtS-pq-x7m"/>
+                                            <constraint firstItem="8TG-7p-gsp" firstAttribute="top" secondItem="nmN-z4-4cs" secondAttribute="top" constant="32" id="ni7-VH-S6b"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="nmN-z4-4cs" firstAttribute="leading" secondItem="2EF-0T-DLQ" secondAttribute="leading" id="1Hk-fY-ZQb"/>
+                                    <constraint firstItem="nmN-z4-4cs" firstAttribute="trailing" secondItem="2EF-0T-DLQ" secondAttribute="trailing" id="SdV-97-3zZ"/>
+                                    <constraint firstItem="nmN-z4-4cs" firstAttribute="centerX" secondItem="kBn-C3-2n8" secondAttribute="centerX" id="SkO-d8-PZ3"/>
+                                    <constraint firstItem="nmN-z4-4cs" firstAttribute="top" secondItem="wWx-a3-HqO" secondAttribute="top" id="YOc-yx-hcW"/>
+                                    <constraint firstAttribute="bottom" secondItem="nmN-z4-4cs" secondAttribute="bottom" id="iMl-si-RWE"/>
+                                    <constraint firstAttribute="trailing" secondItem="nmN-z4-4cs" secondAttribute="trailing" id="x1X-HQ-r1q"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="wWx-a3-HqO"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="2EF-0T-DLQ"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ObZ-9S-GUa"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="kBn-C3-2n8" firstAttribute="top" secondItem="ObZ-9S-GUa" secondAttribute="top" id="GQJ-dn-Kcw"/>
+                            <constraint firstItem="kBn-C3-2n8" firstAttribute="leading" secondItem="ObZ-9S-GUa" secondAttribute="leading" id="Lpp-Pu-Rqj"/>
+                            <constraint firstItem="kBn-C3-2n8" firstAttribute="bottom" secondItem="ObZ-9S-GUa" secondAttribute="bottom" id="Rca-Lp-haC"/>
+                            <constraint firstItem="kBn-C3-2n8" firstAttribute="trailing" secondItem="ObZ-9S-GUa" secondAttribute="trailing" id="Ybw-z3-HIO"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="練習" id="WN8-Dc-g6h"/>
                 </viewController>
@@ -392,6 +470,12 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
